--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -51,6 +51,17 @@ main section.categories-show {
         font-size: 0.8em;
       }
 
+      aside.sold {
+        position: absolute;
+        top: 0;
+        left: 0;
+        padding: 10px;
+        background-color: #E69A99;
+        border-top-right-radius: 4px;
+        border-bottom-right-radius: 20px;
+        color: white
+      }
+
       &:hover {
 
         border-color: #999;
