--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,2 +1,16 @@
-<h1>Admin::Dashboard#show</h1>
-<p>Find me in app/views/admin/dashboard/show.html.erb</p>
+
+
+<section class="admin-products-index">
+
+  <header class="page-header">
+  <h1>Admin &raquo; Dashboard</h1>
+  </header>
+
+  <div class="alert alert-info" role="alert">
+    Number of products: <%= Product.count %>
+  </div>
+  <div class="alert alert-info" role="alert">
+    Number of categories: <%= Product.distinct.pluck(:category_id).count %>
+  </div>
+
+</section>
